RESOLVED FIXED302590
REGRESSION(302840@main): [GStreamer] Broke webcodecs tests
https://bugs.webkit.org/show_bug.cgi?id=302590
Summary REGRESSION(302840@main): [GStreamer] Broke webcodecs tests
Philippe Normand
Reported 2025-11-16 08:21:07 PST
.
Attachments
Philippe Normand
Comment 1 2025-11-16 09:29:39 PST
EWS
Comment 2 2025-11-19 03:54:12 PST
Committed 303245@main (a83aa257d173): <https://commits.webkit.org/303245@main> Reviewed commits have been landed. Closing PR #54005 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-11-19 03:55:12 PST
Note You need to log in before you can comment on or make changes to this bug.